@@ -105,8 +105,8 @@ shuffle_random_loop <- function(seqs_k_n, k, seqs_k_new_i, new_seq, seqs_k) {
     .Call('_universalmotif_shuffle_random_loop', PACKAGE = 'universalmotif', seqs_k_n, k, seqs_k_new_i, new_seq, seqs_k)
 }
 
-shuffle_markov_loop <- function(seq_i_l, seq_i_r, k, seqout, dna, trans, trans_cols) {
-    .Call('_universalmotif_shuffle_markov_loop', PACKAGE = 'universalmotif', seq_i_l, seq_i_r, k, seqout, dna, trans, trans_cols)
+shuffle_markov_loop <- function(seq_i_l, seq_i_r, k, seqout, lets, trans, trans_cols) {
+    .Call('_universalmotif_shuffle_markov_loop', PACKAGE = 'universalmotif', seq_i_l, seq_i_r, k, seqout, lets, trans, trans_cols)
 }
 
 trim_motif_internal <- function(motif, ic_scores, min_ic) {
